# info-machine

./: .gitignore  README.md  build.py  pyproject.toml
.agents/workflows/: backend-dev.md  devops.md  info-machine-project.md  project-lead.md  qa-engineer.md  tech-writer.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md
examples/: sample-claims.json
src/info_machine/: __init__.py  cli.py
src/info_machine/core/: __init__.py  health.py  inspector.py  reporter.py  verifier.py
src/info_machine/inspectors/: __init__.py  battery.py  cpu.py  disk.py  display.py  gpu.py  motherboard.py  network.py  ram.py
src/info_machine/utils/: __init__.py  formatting.py  system.py
tests/: __init__.py  test_cli.py
tests/test_core/: test_health.py  test_verifier.py
tests/test_inspectors/: __init__.py  test_cpu.py
